feat: add picture page

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -19,6 +19,7 @@
     "ok": "OK",
     "or": "or",
     "permissionGrantCamera": "Please grant camera permission to take pictures.",
+    "picture": "Picture",
     "post": "Post",
     "profile": "Profile",
     "report": "Report",
