--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -19,6 +19,7 @@
     "ok": "확인",
     "or": "또는",
     "permissionGrantCamera": "촬영을 위해 카메라 권한을 부여해주세요.",
+    "picture": "사진",
     "post": "게시판",
     "profile": "프로필",
     "report": "신고",
