feat(wip): report and block users

--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -3,6 +3,7 @@
     "appErrorMessage": "통신이 원활하지 않습니다.\n네트워크 상태를 확인해주세요.",
     "block": "차단",
     "blockUser": "{{user}} 차단",
+    "unblock": "차단 해제",
     "blockUserDesc": "사용자를 차단하면 해당 사용자의 콘텐츠에 접근할 수 없습니다. 이 사용자를 차단하시겠습니까?",
     "blockUserSuccess": "사용자가 차단되었습니다",
     "cancel": "취소",
@@ -23,7 +24,9 @@
     "post": "게시판",
     "profile": "프로필",
     "report": "신고",
-    "reportSubject": "Report {{subject}}",
+    "reportSubject": "{{subject}} 신고",
+    "reportHint": "신고할 내용을 입력해주세요.",
+    "reportSuccess": "신고해주셔서 감사합니다.",
     "retry": "재시도",
     "selectFromGallery": "갤러리에서 선택",
     "takeAPhoto": "사진 찍기",
