--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -2,6 +2,7 @@
   "common": {
     "appErrorMessage": "Communication is not smooth.\nPlease check your network status.",
     "block": "Block",
+    "unblock": "Unblock",
     "blockUser": "Block {{user}}",
     "blockUserDesc": "If you block a user, you will not be able to access the user's content. Do you want to block this user?",
     "blockUserSuccess": "User has been blocked",
@@ -24,6 +25,8 @@
     "profile": "Profile",
     "report": "Report",
     "reportSubject": "Report {{subject}}",
+    "reportHint": "Please enter the information you wish to report.",
+    "reportSuccess": "Thank you for reporting.",
     "retry": "Retry",
     "selectFromGallery": "Select from gallery",
     "takeAPhoto": "Take a photo",
