feat: block-users impl (#6)
## Demo

https://github.com/user-attachments/assets/48294c62-ada1-4794-905e-407c71a82d49

## Description
1. **Change Pagination Queries to Cursor Pagination:**
- Update all pagination queries in the Supabase database to use cursor
pagination instead of offset-based pagination.
- Ensure that the new cursor pagination implementation maintains or
improves performance and scalability.

2. **Add User Report Feature:**
- Implement a feature allowing users to report other users for
inappropriate behavior or content.
- Design a database schema to store reports, including details such as
the reporting user, the reported user, the reason for the report, and
the date/time of the report.
   - Create API endpoints for submitting and retrieving reports.
- Ensure proper validation and authentication for the reporting feature.

3. **Add User Block Feature:**
   - Implement a feature allowing users to block other users.
- Design a database schema to store blocked user relationships,
including details such as the blocking user, the blocked user, and the
date/time of the block.
   - Create API endpoints for blocking and unblocking users.
- Ensure that blocked users cannot interact with or view the content of
the users who blocked them.

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -1,4 +1,9 @@
 {
+  "blockUsers": {
+    "cancelBlock": "Cancel Block",
+    "cancelBlockDesc": "If you cancel the block, you will be able to access the user's content. Do you want to cancel the block?",
+    "title": "Blocked Users"
+  },
   "common": {
     "appErrorMessage": "Communication is not smooth.\nPlease check your network status.",
     "block": "Block",
@@ -23,11 +28,15 @@
     "post": "Post",
     "profile": "Profile",
     "report": "Report",
+    "reportHint": "Please enter the information you wish to report.",
     "reportSubject": "Report {{subject}}",
+    "reportSuccess": "Thank you for reporting.",
     "retry": "Retry",
     "selectFromGallery": "Select from gallery",
     "takeAPhoto": "Take a photo",
+    "unblock": "Unblock",
     "unhandledError": "An unhandled error occurred.",
+    "unknown": "Unknown",
     "update": "Update",
     "updateApp": "Update App",
     "user": "User",
@@ -67,7 +76,7 @@
     }
   },
   "settings": {
-    "bannedUsers": "Banned Users",
+    "blockedUsers": "Blocked Users",
     "darkMode": "Dark Mode",
     "loginInfo": "Login Information",
     "notificationSettings": "Notification Settings",
