--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -1,4 +1,9 @@
 {
+  "blockUsers": {
+    "cancelBlock": "차단 취소",
+    "cancelBlockDesc": "차단을 취소하면 사용자의 콘텐츠에 접근할 수 있습니다. 차단을 취소하시겠습니까?",
+    "title": "차단한 사용자"
+  },
   "common": {
     "appErrorMessage": "통신이 원활하지 않습니다.\n네트워크 상태를 확인해주세요.",
     "block": "차단",
@@ -23,11 +28,15 @@
     "post": "게시판",
     "profile": "프로필",
     "report": "신고",
-    "reportSubject": "Report {{subject}}",
+    "reportHint": "신고할 내용을 입력해주세요.",
+    "reportSubject": "{{subject}} 신고",
+    "reportSuccess": "신고해주셔서 감사합니다.",
     "retry": "재시도",
     "selectFromGallery": "갤러리에서 선택",
     "takeAPhoto": "사진 찍기",
+    "unblock": "차단 해제",
     "unhandledError": "처리되지 않은 오류가 발생했습니다.",
+    "unknown": "알 수 없음",
     "update": "업데이트",
     "updateApp": "앱 업데이트",
     "user": "사용자",
@@ -67,7 +76,7 @@
     }
   },
   "settings": {
-    "bannedUsers": "차단한 사용자",
+    "blockedUsers": "차단한 사용자",
     "darkMode": "다크 모드",
     "loginInfo": "로그인 정보",
     "notificationSettings": "알림 설정",
