fix: layout auth routes
This is very critical fixes to sync auth states.

--- a/assets/langs/ios/ko.json
+++ b/assets/langs/ios/ko.json
@@ -1,6 +1,6 @@
 {
-  "CFBundleDisplayName": "크플코",
-  "app_name": "크플코",
+  "CFBundleDisplayName": "크로스플랫폼 코리아",
+  "app_name": "크로스플랫폼 코리아",
   "NSMicrophoneUsageDescription": "크플코 앱에서 비디오를 촬영할 때 오디오 녹음을 활성화하기 위해 마이크 사용 권한이 필요합니다. 예를 들어, 앱 내에서 비디오를 녹화할 경우, 마이크를 통해 동시에 오디오를 캡처하여 비디오에 소리가 포함되도록 합니다. 사용자는 언제든지 설정에서 이 권한을 철회할 수 있습니다.",
   "NSCameraUsageDescription": "크플코는 플랫폼에서 다른 사용자들과 공유할 사진과 비디오를 찍기 위해 카메라 접근 권한을 요청합니다. 예를 들어, 라이브 이벤트 중 순간을 캡처하여 앱을 통해 직접 공유할 수 있습니다. 사용자는 언제든지 설정에서 이 권한을 철회할 수 있습니다.",
   "NSPhotoLibraryAddUsageDescription": "크플코는 앱에서 생성하거나 편집한 미디어 콘텐츠를 저장하고 관리할 수 있도록 사진 갤러리에 사진과 비디오를 저장할 수 있는 권한을 요청합니다. 예를 들어, 방금 찍은 사진을 저장할 수 있습니다. 사용자는 언제든지 설정에서 이 권한을 철회할 수 있습니다.",
