--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -5,6 +5,7 @@
     "title": "차단한 사용자"
   },
   "common": {
+    "add": "추가",
     "appErrorMessage": "통신이 원활하지 않습니다.\n네트워크 상태를 확인해주세요.",
     "block": "차단",
     "blockUser": "{{user}} 차단",
@@ -61,11 +62,31 @@
     "title": "로그인 정보"
   },
   "onboarding": {
+    "affiliation": "소속",
+    "affiliationPlaceholder": "소속을 입력하세요",
     "displayName": "닉네임",
     "displayNamePlaceholder": "닉네임을 입력하세요",
-    "title": "온보딩",
+    "futureExpectations": "앞으로 기대하는 것",
+    "futureExpectationsPlaceholder": "앞으로 기대하는 것을 입력하세요",
+    "githubId": "GitHub ID",
+    "githubIdPlaceholder": "GitHub ID를 입력하세요",
+    "introduction": "소개",
+    "introductionPlaceholder": "자기소개를 입력하세요",
+    "meetupId": "Meetup ID",
+    "meetupIdPlaceholder": "Meetup ID를 입력하세요",
+    "motivationForEventParticipation": "이벤트 참가 동기",
+    "motivationForEventParticipationPlaceholder": "만약 미팅에 참여하신다면, 이벤트 참여 동기를 입력해주세요",
+    "nationality": "국적",
+    "nationalityPlaceholder": "국적을 입력하세요",
+    "otherSnsUrls": "다른 SNS URL",
+    "otherSnsUrlsPlaceholder": "다른 SNS URL을 입력하세요",
+    "sectionDescription": "계속 진행하기 위해 아래 웰컴 카드를 제출해주세요!",
     "sectionTitle": "개발자 커뮤니티에 오신 것을 환영합니다!",
-    "sectionDescription": "계속 진행하기 위해 아래 웰컴 카드를 제출해주세요!"
+    "title": "온보딩",
+    "desiredConnection": "연결되고 싶은 분",
+    "desiredConnectionPlaceholder": "연결되고 싶은 분을 입력하세요",
+    "yourTags": "나의 태그",
+    "yourTagsPlaceholder": "나와 관련된 태그들을 입력하세요"
   },
   "post": {
     "update": {
