feat(enh): handle error message

--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -50,7 +50,10 @@
     }
   },
   "error": {
-    "default": "오류가 발생했습니다!"
+    "default": "오류가 발생했습니다!",
+    "displayNameExists": "이미 존재하는 닉네임입니다",
+    "displayNameInvalid": "닉네임은 2자 이상 20자 이하여야 합니다",
+    "displayNameIsEmpty": "닉네임을 입력해주세요"
   },
   "loginInfo": {
     "cancel": "취소",
