--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -50,7 +50,10 @@
     }
   },
   "error": {
-    "default": "Error occurred!"
+    "default": "Error occurred!",
+    "displayNameExists": "The nickname already exists",
+    "displayNameInvalid": "Nickname must be between 2 and 20 characters",
+    "displayNameIsEmpty": "Please enter a nickname"
   },
   "loginInfo": {
     "cancel": "Cancel",
