--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -17,6 +17,15 @@
     "deleteSuccess": "Successfully deleted",
     "deletedAccount": "Retired account.",
     "done": "Done",
+    "follow": "Follow",
+    "followers": {
+      "one": "Follower",
+      "other": "Followers"
+    },
+    "followings": {
+      "one": "Following",
+      "other": "Followings"
+    },
     "image": "Image",
     "invalidUrl": "Invalid URL",
     "latest": "Latest",
@@ -108,6 +117,9 @@
       "writeFailed": "Write failed!",
       "writeSuccess": "Successfully written!"
     }
+  },
+  "profile": {
+    "title": "Profile"
   },
   "profileUpdate": {
     "title": "Profile Update"
