--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -17,6 +17,15 @@
     "deleteSuccess": "성공적으로 삭제되었습니다",
     "deletedAccount": "탈퇴한 계정입니다.",
     "done": "완료",
+    "follow": "팔로우",
+    "followers": {
+      "one": "팔로워",
+      "other": "팔로워"
+    },
+    "followings": {
+      "one": "팔로잉",
+      "other": "팔로잉"
+    },
     "image": "이미지",
     "invalidUrl": "유효하지 않은 URL",
     "latest": "최신순",
@@ -108,6 +117,9 @@
       "writeFailed": "작성에 실패했습니다!",
       "writeSuccess": "성공적으로 작성되었습니다!"
     }
+  },
+  "profile": {
+    "title": "프로필"
   },
   "profileUpdate": {
     "title": "프로필 수정"
