feat: profile page with tags

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -98,7 +98,8 @@
     "sectionTitle": "Welcome to Dev Community!",
     "title": "Onboarding",
     "yourTags": "Your Tags",
-    "yourTagsPlaceholder": "Please enter tags related to you"
+    "yourTagsPlaceholder": "Please enter tags related to you",
+    "userTags": "User Tags"
   },
   "post": {
     "update": {
