--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -5,6 +5,7 @@
     "title": "차단한 사용자"
   },
   "common": {
+    "add": "추가",
     "appErrorMessage": "통신이 원활하지 않습니다.\n네트워크 상태를 확인해주세요.",
     "block": "차단",
     "blockUser": "{{user}} 차단",
@@ -15,6 +16,16 @@
     "delete": "삭제",
     "deleteSuccess": "성공적으로 삭제되었습니다",
     "deletedAccount": "탈퇴한 계정입니다.",
+    "done": "완료",
+    "follow": "팔로우",
+    "followers": {
+      "one": "팔로워",
+      "other": "팔로워"
+    },
+    "followings": {
+      "one": "팔로잉",
+      "other": "팔로잉"
+    },
     "image": "이미지",
     "invalidUrl": "유효하지 않은 URL",
     "latest": "최신순",
@@ -48,7 +59,10 @@
     }
   },
   "error": {
-    "default": "오류가 발생했습니다!"
+    "default": "오류가 발생했습니다!",
+    "displayNameExists": "이미 존재하는 닉네임입니다",
+    "displayNameInvalid": "닉네임은 2자 이상 20자 이하여야 합니다",
+    "displayNameIsEmpty": "닉네임을 입력해주세요"
   },
   "loginInfo": {
     "cancel": "취소",
@@ -60,9 +74,32 @@
     "title": "로그인 정보"
   },
   "onboarding": {
+    "affiliation": "소속",
+    "affiliationPlaceholder": "소속을 입력하세요",
+    "desiredConnection": "연결되고 싶은 분",
+    "desiredConnectionPlaceholder": "연결되고 싶은 분을 입력하세요",
     "displayName": "닉네임",
     "displayNamePlaceholder": "닉네임을 입력하세요",
-    "title": "온보딩"
+    "futureExpectations": "앞으로 기대하는 것",
+    "futureExpectationsPlaceholder": "앞으로 기대하는 것을 입력하세요",
+    "githubId": "GitHub ID",
+    "githubIdPlaceholder": "GitHub ID를 입력하세요",
+    "introduction": "소개",
+    "introductionPlaceholder": "자기소개를 입력하세요",
+    "meetupId": "Meetup ID",
+    "meetupIdPlaceholder": "Meetup ID를 입력하세요",
+    "motivationForEventParticipation": "이벤트 참가 동기",
+    "motivationForEventParticipationPlaceholder": "만약 미팅에 참여하신다면, 이벤트 참여 동기를 입력해주세요",
+    "nationality": "국적",
+    "nationalityPlaceholder": "국적을 입력하세요",
+    "otherSnsUrls": "다른 SNS URL",
+    "otherSnsUrlsPlaceholder": "다른 SNS URL을 입력하세요",
+    "sectionDescription": "계속 진행하기 위해 아래 웰컴 카드를 제출해주세요!",
+    "sectionTitle": "개발자 커뮤니티에 오신 것을 환영합니다!",
+    "title": "온보딩",
+    "yourTags": "나의 태그",
+    "yourTagsPlaceholder": "나와 관련된 태그들을 입력하세요",
+    "userTags": "사용자 태그"
   },
   "post": {
     "update": {
@@ -81,6 +118,12 @@
       "writeFailed": "작성에 실패했습니다!",
       "writeSuccess": "성공적으로 작성되었습니다!"
     }
+  },
+  "profile": {
+    "title": "프로필"
+  },
+  "profileUpdate": {
+    "title": "프로필 수정"
   },
   "settings": {
     "blockedUsers": "차단한 사용자",
