--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -12,6 +12,7 @@
     "blockUserDesc": "사용자를 차단하면 해당 사용자의 콘텐츠에 접근할 수 없습니다. 이 사용자를 차단하시겠습니까?",
     "blockUserSuccess": "사용자가 차단되었습니다",
     "cancel": "취소",
+    "community": "커뮤니티",
     "confirm": "확인",
     "delete": "삭제",
     "deleteSuccess": "성공적으로 삭제되었습니다",
@@ -97,9 +98,9 @@
     "sectionDescription": "계속 진행하기 위해 아래 웰컴 카드를 제출해주세요!",
     "sectionTitle": "개발자 커뮤니티에 오신 것을 환영합니다!",
     "title": "온보딩",
+    "userTags": "사용자 태그",
     "yourTags": "나의 태그",
-    "yourTagsPlaceholder": "나와 관련된 태그들을 입력하세요",
-    "userTags": "사용자 태그"
+    "yourTagsPlaceholder": "나와 관련된 태그들을 입력하세요"
   },
   "post": {
     "update": {
