--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -14,10 +14,12 @@
     "cancel": "Cancel",
     "community": "Community",
     "confirm": "Confirm",
+    "contactUs": "Contact Us",
     "delete": "Delete",
     "deleteSuccess": "Successfully deleted",
     "deletedAccount": "Retired account.",
     "done": "Done",
+    "error": "Error",
     "follow": "Follow",
     "followers": {
       "one": "Follower",
@@ -63,7 +65,8 @@
     "default": "Error occurred!",
     "displayNameExists": "The nickname already exists",
     "displayNameInvalid": "Nickname must be between 2 and 20 characters",
-    "displayNameIsEmpty": "Please enter a nickname"
+    "displayNameIsEmpty": "Please enter a nickname",
+    "unableToOpenEmailClient": "Unable to open email client"
   },
   "loginInfo": {
     "cancel": "Cancel",
