--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -143,7 +143,7 @@
   },
   "signIn": {
     "continueWithProvider": "{{provider}} 계정으로 시작하기",
-    "description": "한국의 개발자들과 전세계 개발자들이 소통하는 곳!",
+    "description": "전 세계 개발자들이 한국 개발자들과 만나는 곳!",
     "googleIdNotAvailable": "존재하지 않는 Google ID입니다",
     "playServiceNotAvailable": "Google Play 서비스를 사용할 수 없습니다",
     "policyAgreement": "다음 단계로 진행함과 동시에 {{termsOfService}} 및 {{privacyPolicy}}에 동의하는 것으로 간주합니다.",
