--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -42,6 +42,7 @@
     "picture": "Picture",
     "post": "Post",
     "profile": "Profile",
+    "pushNotifications": "Push Notifications",
     "report": "Report",
     "reportHint": "Please enter the information you wish to report.",
     "reportSubject": "Report {{subject}}",
@@ -59,17 +60,17 @@
     "viewsWithCount": {
       "one": "Views %{count}",
       "other": "Views %{count}"
-    },
-    "pushNotifications": "Push Notifications"
+    }
   },
   "error": {
     "default": "Error occurred!",
     "displayNameExists": "The display name already exists",
     "displayNameInvalid": "Display name must be between 2 and 20 characters",
     "displayNameIsEmpty": "Please enter a display name",
-    "unableToOpenEmailClient": "Unable to open email client",
+    "failedToGetPushToken": "Failed to get push token for push notification!",
+    "mustUsePhysicalDeviceForSubject": "Must use physical device for {{subject}}",
     "projectIdNotFound": "Project ID not found",
-    "mustUsePhysicalDeviceForSubject": "Must use physical device for {{subject}}"
+    "unableToOpenEmailClient": "Unable to open email client"
   },
   "loginInfo": {
     "cancel": "Cancel",
